🎉 Realesed beta version
